--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Build folders
+debug
+release
+
+# C++ files
+
 # Prerequisites
 *.d
 
@@ -30,3 +36,17 @@
 *.exe
 *.out
 *.app
+
+# CMake files
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
